fix style overflow

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,5 +1,5 @@
-@import "modules/fonts";
 @import "modules/core";
+@import "modules/fonts";
 @import "modules/screens";
 
 /**
@@ -71,17 +71,19 @@ header {
 /**
 * Player cards
 */
+main {
+  width: 100%;
+}
 
 main section {
+  max-width: 1600px;
+  margin-inline: auto;
+  padding-inline: 20px;
+  padding-block: 100px;
+
   display: grid;
   grid-template-columns: 1fr;
   gap: 30px;
-
-  width: 100%;
-  max-width: 1600px;
-  margin-inline: auto;
-  padding: 20px;
-  padding-block: 100px;
 
   @include lg {
     grid-template-columns: repeat(4, 1fr);
@@ -111,6 +113,7 @@ main section {
       img {
         width: 100%;
         aspect-ratio: 3/2;
+        object-fit: cover;
       }
 
       &-info {
@@ -150,16 +153,16 @@ main section {
     .cards-wrapper {
       display: grid;
       gap: 20px;
-      grid-template-columns: 1fr;
 
       @include md {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: 1fr 1fr;
       }
 
       @include lg {
         grid-template-columns: 1fr;
       }
     }
+
     .card {
       background-color: black;
       padding: 30px;
@@ -213,6 +216,7 @@ main section {
         input {
           padding: 15px 20px;
           appearance: none;
+          width: 100%;
         }
       }
 
